--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	--color-secundario: #D8DFE8;
 	--color-terciario: #F3F5FC;
 	--color-cuaternario: #343A40;
-	--color-alerta: #a30000; 
+	--color-alerta: #680000; 
 	--fuente-inter: 'Inter', sans-serif;
 	}
 
@@ -11,7 +11,7 @@
 * {
 	background-color: var(--color-terciario);
 	font-family: var(--fuente-inter);
-	font-size: 23px;	
+	font-size: 24px;	
 	font-weight: 400;
 	line-height: 150%;
 	font-style: normal;
@@ -23,8 +23,12 @@ main {
 }
 
 #seccion_lateral {
+	display: flex;
 	height: 100vh;
 	width: 50%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 #div_logo {
@@ -40,7 +44,7 @@ main {
 
 #seccion_encriptacion {
 	height: 90%;
-	width: 100%;
+	width: 80%;
 }
 
 #div_caja_texto {
@@ -63,16 +67,15 @@ main {
 
 #div_advertencia {
 	width: 100%;
-
 }
 
 #div_caja_advertencia {
+	margin: 0;
 	max-width: 85%;
 	font-size: 1rem;
 	display: inline-flex;
 	align-items: center;
-	margin-left: 2.5rem;
-	padding: 1rem;
+	padding: 0.5rem;
 	gap: 1rem;
 }
 
@@ -94,14 +97,14 @@ main {
 #div_botones {
 	width: 100%;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	padding: 1rem 0;
-	gap: 2rem;
+	gap: 1rem;
 }
 
 .boton {
-	width: 40%;
+	width: 50%;
 	height: 80%;
 	padding: 10px;
 	font-size: 1rem;
@@ -129,20 +132,12 @@ main {
 
 /* 	lado derecho */
 
-#seccion_lateral {
-	display: flex;
-	height: 100vh;
-	width: 50%;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
 #div_desencriptar {
-	width: 80%;
-	height: 85%;
+	width: 70%;
+	height: 75%;
+	padding: 5%;
 	box-shadow: 0px 24px 32px 8px rgba(0, 0, 0, 0.08);
-	border-radius: 12px;
+	border-radius: 32px;
 }
 
 #div_imagen_texto {
@@ -151,10 +146,14 @@ main {
 	justify-content: center;
 	height: 80%;
 	border-radius: 12px;
+	width: 100%;
 }
 
 #imagen {
-	display: block;
+	height: 70%;
+	width: 70%;
+	justify-content: center;
+	object-fit: contain;
 }
 
 #caja_texto_respuesta {
@@ -168,13 +167,6 @@ main {
 
 #caja_texto_respuesta:focus {
 	outline: none;
-}
-
-#div_desencriptar img{
-	height: 70%;
-	width: 70%;
-	justify-content: center;
-	object-fit: scale-down;
 }
 
 #advertencia_respuesta {
@@ -198,7 +190,7 @@ main {
 	align-self: stretch;
 	color: var(--color-cuaternario);
 	text-align: center;
-	font-size: 12px;
+	font-size: 0.9rem;
 	font-style: normal;
 }
 
@@ -225,3 +217,52 @@ main {
 	display: block;
 }
 
+@media (max-width: 770px) {
+	#div_logo {
+		height: 20%;
+	}
+
+	main {
+		flex-direction: column;
+		gap: 20px;
+	}
+
+	#seccion_lateral {
+		width: auto;
+		height: auto;
+	}
+
+	#div_botones {
+		width: 95%;
+	}
+	
+	#imagen {
+		display: none;
+	}
+
+	#div_imagen_texto {
+        height: auto;
+        min-height: 20px
+    }
+
+	#caja_texto_respuesta {
+        width: 100%;
+        height: 100%;
+        display: none;
+    }
+	
+	#boton_copiar {
+		width: 95%;
+	}
+}
+
+
+@media (max-width: 400px) {
+	#div_botones {
+		flex-direction: column;
+	}
+
+	.boton {
+		width: 100%;
+	}
+}
