--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main {
 	align-items: center;
 	padding: 0.5rem;
 	gap: 1rem;
+	line-height: 120%;
 }
 
 #div_caja_advertencia p{
@@ -182,16 +183,19 @@ main {
 	font-weight: 700;
 	line-height: 120%;
 	align-self: stretch;
+	padding: 5%;
 }
 
 #advertencia_respuesta p{
 	display: flex;
+	
 	flex-direction: column;
 	align-self: stretch;
 	color: var(--color-cuaternario);
 	text-align: center;
 	font-size: 0.9rem;
 	font-style: normal;
+	line-height: 120%;
 }
 
 #div_boton_copiar {
